removed main-container margin. fixes alignment?

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -15,7 +15,7 @@
 }
 
 .main-container {
-  margin: 10px;
+  /*margin: 0px;*/
   padding: 20px;
 }
 
